# autobuild_libraries

./: .gitignore  .gitmodules  README.md  build_Imath.sh  build_all.sh  build_brotli.sh  build_bzip2.sh  build_clipper2.sh  build_freetype.sh  build_glslang.sh  build_harfbuzz.sh  build_libz.sh  build_lua.sh  build_miniaudio.sh  build_ogg.sh  build_openexr.sh  build_opus.sh  build_opusfile.sh  build_vorbis.sh  build_webp.sh  common_vars.sh  setup_submodules.sh
.github/workflows/: build.yml  build_linux.yml
gl_example/: GLSL_TO_SPIRV.md  README.md  example_shader.vert  glsl_to_spirv.c
libs/Clipper2/CPP/: CMakeLists.txt
libs/Imath/: CMakeLists.txt
libs/Imath/src/Imath/: CMakeLists.txt
libs/bzip2/: CMakeLists.txt
libs/clipper2c/: CMakeLists.txt
libs/clipper2c/include/: types.h
libs/clipper2c/src/: conv.cpp
libs/glslang/: .gitignore  CMakeLists.txt
libs/libwebp/cmake/: cpu.cmake
libs/lua/src/: llimits.h
libs/miniaudio/: miniaudio.c  miniaudio.h
libs/openexr/: CMakeLists.txt
libs/openexr/src/lib/: CMakeLists.txt
libs/openexr/src/lib/OpenEXR/: CMakeLists.txt  ImfSimd.h
libs/openexr/src/lib/OpenEXRCore/: CMakeLists.txt  internal_zip.c
libs/opusfile/: CMakeLists.txt
libs/zlib/: .gitignore  CMakeLists.txt
ndk/29.0.14206865/prebuilt/linux-x86_64/include/: libyasm-stdint.h
